# Train_Scheduler

./: .gitignore  Dockerfile  How_to_run.md  Project Idea.docx  README.md  brain_storm.md  docker-compose.yml  flowchart.md  main.py  main_map.html  pyproject.toml  requirements.txt  run_railway_pipeline.py
Model/: run.py
config/: countries_config.yaml
dashboard/: index.html  main_map.html
notebooks/: visualize.ipynb
pipeline/src/: pipeline_initiator.py  route_optimizer.py  terrain_analysis.py  visualizer.py
pipeline/src/utils/: geometry.py  terrain.py
scripts/: fetch_railway_data.py  start_here.py
src/data_processing/: __init__.py  country_processor.py  csv_processor.py  data_loader.py  feature_engineering.py  geospatial_processor.py  network_extractor.py  terrain_analyzer.py
src/models/: __init__.py
src/models/evaluation/: comparison_metrics.py  cost_analyzer.py  performance_metrics.py
src/models/optimization/: route_optimizer.py
src/rail_reference_model/etl/: clean_tables.py  load_osm.py
src/rail_reference_model/features/: build_graph.py  vectorize.py
src/rail_reference_model/inference/: service.py
src/rail_reference_model/models/: cluster.py  gnn_encoder.py  predict.py  train_model.py
src/visualization/: __init__.py  route_visualizer.py
