[project]
name = "rail-reference-model"
version = "0.1.0"
description = ""
authors = [
    {name = "MiguelIbrahimE",email = "miguelibrahim8@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "geopandas (>=1.1.1,<2.0.0)",
    "osmnx (>=2.0.5,<3.0.0)",
    "networkx (>=3.5,<4.0)",
    "pyproj (>=3.7.1,<4.0.0)",
    "typer (>=0.16.0,<0.17.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "pdfplumber (>=0.11.7,<0.12.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "torch (>=2.7.1,<3.0.0)",
    "torchvision (>=0.22.1,<0.23.0)",
    "torchaudio (>=2.7.1,<3.0.0)",
    "lxml (>=6.0.0,<7.0.0)",
    "torch-geometric (>=2.6.1,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "folium (>=0.20.0,<0.21.0)",
    "geopy (>=2.4.1,<3.0.0)",
    "overpy (>=0.7,<0.8)",
    "rasterio (>=1.4.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
